--- a/src/app/pages/tables/dashboard/dashboard.component.html
+++ b/src/app/pages/tables/dashboard/dashboard.component.html
@@ -18,6 +18,18 @@
   </div>
 </div>
 
+<div class="row">
+  <!--Productos Top Hoy-->
+  <div class="col-xxxl-12 col-xxl-12 col-lg-12 col-md-12">
+    <nb-card>
+      <nb-card-header>Datos Facturación Ax</nb-card-header>
+        <nb-card-body>
+          <ngx-datos-facturacion-ax></ngx-datos-facturacion-ax>
+        </nb-card-body>
+    </nb-card>
+  </div>
+</div>
+
 <!--Segunda Parte Dashboard-->
 <div class="row">
   <!--DashBoard Ventas hoy-->
