--- a/src/app/pages/tables/ventas-productos/ventas-productos.component.html
+++ b/src/app/pages/tables/ventas-productos/ventas-productos.component.html
@@ -1,22 +1,32 @@
 <nb-card size="large" style="height: 100%;">
 
-  <nb-card-header>Productos Vendidos</nb-card-header>
-
-  <div style="display: flex; justify-content: flex-end; align-items: center; padding: 15px;" *ngIf="!mostrarTabla">
-      <!--IDPRODUCT-->
+  <nb-card-header>
+    <div style="display: flex; justify-content: space-between;">
       <div>
+        <b><span>Productos Vendidos</span></b>
+      </div>
+      <div>
+        <span *ngIf="fechaInicio != null">Fechas: {{ fechaInicio }} - {{ fechaFin }} , <span style="color: red;"> Total : {{ tamanoArray }} productos</span></span>
+
+      </div>
+    </div>
+    </nb-card-header>
+
+  <nb-card-body class="two-inputs">
+
+    <div style="display: flex; justify-content: flex-end; align-items: center; padding: 15px;">
+      <!--IDPRODUCT-->
+      <div style="padding: 10px;">
         <input type="text" nbInput fullWidth placeholder="IdProduct:" [(ngModel)]="idProduct">
       </div>
       <!--FECHAS-->
-      <div>
-        <nb-card-body class="two-inputs">
+      <div style="padding: 10px;">
           <input nbInput placeholder="Seleccionar Fecha:" [nbDatepicker]="rangepicker">
           <nb-rangepicker #rangepicker (rangeChange)="cambioRango($event)"></nb-rangepicker>
-        </nb-card-body>
       </div>
       <!--TIENDA-->
-      <div style="margin-right: 20px;">
-        <nb-select placeholder="Canal" (selectedChange)="select($event)">
+      <div style="margin-right: 20px; padding: 10px;">
+        <nb-select placeholder=" Canal de Pago " (selectedChange)="select($event)">
           <nb-option *ngFor="let name of tiendas; let i = index" [value]="i+1">{{ name }}</nb-option>
         </nb-select>
       </div>
@@ -26,37 +36,13 @@
       </div>
   </div>
 
-  <div *ngIf="mostrarTabla" style="width: 90%; padding: 25px; margin: auto; height: 100%;">
-    <div class="table-responsive cnstr-record product-tbl" width="90%">
-      <table class="table table-bordered heading-hvr">
-        <thead>
-          <tr>
-            <th>IdProduct</th>
-            <th>Producto</th>
-            <th>Cantidad</th>
-            <th>Importe de Venta</th>
-            <th>Fecha</th>
-            <th>Pago</th>
-          </tr>
-        </thead>
-        <tbody *ngFor="let product of arrayRelleno">
-          <tr>
-            <td>{{product.product_id}}</td>
-            <td>{{product.name}}</td>
-            <td>{{product.product_quantity}}</td>
-            <td>{{product.importeVendido | currency:'EUR': true}}</td>
-            <td>{{product.date_add}}</td>
-            <td>{{product.payment}}</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+  <ng2-smart-table [settings]="config" [source]="arrayRelleno" ></ng2-smart-table>
 
-  </div>
+  </nb-card-body>
 
-  <div *ngIf="mostrarTabla" style="width: 90%; padding: 25px; margin: auto; height: 100%;">
+  <!-- <div *ngIf="mostrarTabla" style="width: 90%; padding: 25px; margin: auto; height: 100%;">
     <canvas id="canvasSumatoria">{{ chartSumatoria }}</canvas>
-  </div>
+  </div> -->
 
 </nb-card>
 
