--- a/src/app/pages/tables/registro-pedidos-pre-almacen/registro-pedidos-pre-almacen.component.html
+++ b/src/app/pages/tables/registro-pedidos-pre-almacen/registro-pedidos-pre-almacen.component.html
@@ -4,6 +4,8 @@
 
   <nb-card-body class="two-inputs">
 
+    <p>Esto sucede cuando un pedido a entrado con alguno de los productos fuera de stock</p><br>
+
     <ng2-smart-table [settings]="config" [source]="source"></ng2-smart-table>
 
   </nb-card-body>
