--- a/src/app/pages/extra-components/alertas-orion/alertas-orion.component.html
+++ b/src/app/pages/extra-components/alertas-orion/alertas-orion.component.html
@@ -2,6 +2,7 @@
 <nb-card *ngIf="pedidosNoEnviados > 0">
   <nb-card-header>Pedidos > 3 dias NO ENVIADOS</nb-card-header>
   <nb-card-body>
+    <span>Control pedidos de hace 3 días no enviados o no cambiado el estado a ENVIADO.</span><br><br>
     <ngx-pedidos-no-enviados></ngx-pedidos-no-enviados>
   </nb-card-body>
 </nb-card>
