--- a/src/app/pages/extra-components/alertas-orion/components/or-duplicados/or-duplicados.component.html
+++ b/src/app/pages/extra-components/alertas-orion/components/or-duplicados/or-duplicados.component.html
@@ -1,10 +1,10 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Order</th>
+      <th scope="col">Nº Pedido</th>
       <th scope="col">Payment</th>
       <th scope="col">Estado</th>
-      <th scope="col">Fecha de pedido</th>
+      <th scope="col">Fecha pedido</th>
     </tr>
   </thead>
   <tbody>
