--- a/src/app/pages/extra-components/alertas-orion/components/pedido-transferencia-bancaria/pedido-transferencia-bancaria.component.html
+++ b/src/app/pages/extra-components/alertas-orion/components/pedido-transferencia-bancaria/pedido-transferencia-bancaria.component.html
@@ -1,13 +1,13 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Referencia</th>
+      <th scope="col">Nº Pedido</th>
       <th scope="col">Id Producto</th>
       <th scope="col">Producto</th>
       <th scope="col">URL Pedido</th>
       <th scope="col">Stock</th>
       <th scope="col">Total</th>
-      <th scope="col">Fecha</th>
+      <th scope="col">Fecha Pedido</th>
     </tr>
   </thead>
   <tbody>
