--- a/src/app/pages/extra-components/alertas-orion/components/precios-cambiados/precios-cambiados.component.html
+++ b/src/app/pages/extra-components/alertas-orion/components/precios-cambiados/precios-cambiados.component.html
@@ -3,7 +3,7 @@
     <tr>
       <th scope="col">Id Producto</th>
       <th scope="col">Ean13</th>
-      <th scope="col">Reference</th>
+      <th scope="col">Referencia</th>
       <th scope="col">Id Ax</th>
       <th scope="col">Precio Orion91</th>
       <th scope="col">Precio Ax</th>
