--- a/src/app/pages/tables/dashboard/components/cuadro-avance-semanal/cuadro-avance-semanal.component.html
+++ b/src/app/pages/tables/dashboard/components/cuadro-avance-semanal/cuadro-avance-semanal.component.html
@@ -2,20 +2,20 @@
   <!--Parte 1-->
   <div>
     <div>
-      <h6>Importe Total(Hoy)</h6>
+      <h6>Importe Total (Hoy (Con Iva))</h6>
       <h5>{{ importeHoy | currency:'EUR': true }}</h5>
     </div>
     <div>
       <nb-progress-bar [value]="porcentajeImportePosibleNegativo" [status]="status"></nb-progress-bar><br>
       <span>Porcentaje (<b> {{ porcentajeImporte[0] }}% </b>)</span><br>
-      <span>Importe Total hace 7 dias: {{ importe7 | currency:'EUR': true}}</span>
+      <span>Importe Total hace 7 dias (Con Iva): {{ importe7 | currency:'EUR': true}}</span>
     </div>
   </div>
   <!--Parte 2-->
   <br>
   <div>
     <div>
-      <h6>Número de Pedidos(Hoy)</h6>
+      <h6>Número de Pedidos (Hoy)</h6>
       <h5>{{ pedidosHoy }}</h5>
     </div>
     <div>
@@ -28,7 +28,7 @@
   <br>
   <div>
     <div>
-      <h6>Carrito(Hoy)</h6>
+      <h6>Carrito (Hoy)</h6>
       <h5>{{ carritoHoy | currency:'EUR': true }}</h5>
     </div>
     <div>
