--- a/src/app/pages/tables/dashboard/components/rotura-stock-dashboard/rotura-stock-dashboard.component.html
+++ b/src/app/pages/tables/dashboard/components/rotura-stock-dashboard/rotura-stock-dashboard.component.html
@@ -7,9 +7,9 @@
         <th scope="col">Producto</th>
         <th scope="col">Imagen</th>
         <th scope="col">Hoy</th>
-        <th scope="col">Hoy(-1)</th>
-        <th scope="col">Hoy(-2)</th>
-        <th scope="col">Hoy(-3)</th>
+        <th scope="col">Hace 1 Dia</th>
+        <th scope="col">Hace 2 Días</th>
+        <th scope="col">Hace 3 Días</th>
       </tr>
     </thead>
     <tbody>
