--- a/src/app/pages/tables/roturas/roturas.component.html
+++ b/src/app/pages/tables/roturas/roturas.component.html
@@ -1,7 +1,7 @@
 <nb-card [nbSpinner]="loading" nbSpinnerStatus="primary">
-  <nb-card-header>Roturas</nb-card-header>
+  <nb-card-header>Roturas Futuras</nb-card-header>
   <nb-card-body>
-    <span>Calculo de roturas en funcion del consumo medio diario de los ultimos 30 dias.</span><br><br>
+    <span>Cálculo de roturas en funcion del consumo medio diario de los ultimos 30 dias.</span><br><br>
     <ng2-smart-table [settings]="config" [source]="source">
     </ng2-smart-table>
   </nb-card-body>
