--- a/src/app/pages/extra-components/alertas-orion/components/combinados-precios-diferentes/combinados-precios-diferentes.component.html
+++ b/src/app/pages/extra-components/alertas-orion/components/combinados-precios-diferentes/combinados-precios-diferentes.component.html
@@ -4,9 +4,9 @@
       <th scope="col">Precios Distintos</th>
       <th scope="col">Id Producto</th>
       <th scope="col">Ean13</th>
-      <th scope="col">Referencia</th>
+      <th scope="col">Nº Pedido</th>
       <th scope="col">Producto</th>
-      <th scope="col">URL</th>
+      <th scope="col">URL Producto</th>
       <th scope="col">Precio</th>
     </tr>
   </thead>
