--- a/src/app/pages/extra-components/alertas-orion/components/pedidos-enviados-ax/pedidos-enviados-ax.component.html
+++ b/src/app/pages/extra-components/alertas-orion/components/pedidos-enviados-ax/pedidos-enviados-ax.component.html
@@ -1,7 +1,7 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Referencia</th>
+      <th scope="col">Nº Pedido</th>
       <th scope="col">Tipo de Pago</th>
       <th scope="col">PVC</th>
       <th scope="col">Importe Pedido</th>
