--- a/src/app/pages/extra-components/alertas-orion/components/pedidos-no-enviados/pedidos-no-enviados.component.html
+++ b/src/app/pages/extra-components/alertas-orion/components/pedidos-no-enviados/pedidos-no-enviados.component.html
@@ -2,13 +2,13 @@
   <table class="table table-striped">
     <thead>
       <tr>
-        <th scope="col">Referencia</th>
+        <th scope="col">Nº Pedido</th>
         <th scope="col">URL</th>
-        <th scope="col">Payment</th>
+        <th scope="col">Pago/Canal</th>
         <th scope="col">Estado</th>
         <th scope="col">Total Pedido</th>
         <th scope="col">País</th>
-        <th scope="col">Fecha</th>
+        <th scope="col">Fecha Pedido</th>
       </tr>
     </thead>
     <tbody>
