--- a/src/app/pages/extra-components/alertas-orion/components/pedidos-pendiente-validacion/pedidos-pendiente-validacion.component.html
+++ b/src/app/pages/extra-components/alertas-orion/components/pedidos-pendiente-validacion/pedidos-pendiente-validacion.component.html
@@ -2,12 +2,12 @@
   <table class="table table-striped">
     <thead>
       <tr>
-        <th scope="col">Referencia</th>
-        <th scope="col">URL</th>
+        <th scope="col">Nº Pedido</th>
+        <th scope="col">URL Pedido</th>
         <th scope="col">Importe Pedido</th>
-        <th scope="col">Payment</th>
+        <th scope="col">Pago/Canal</th>
         <th scope="col">Estado</th>
-        <th scope="col">Fecha</th>
+        <th scope="col">Fecha Pedido</th>
       </tr>
     </thead>
     <tbody>
