--- a/src/app/pages/tables/abonos-productos/abonos-productos.component.html
+++ b/src/app/pages/tables/abonos-productos/abonos-productos.component.html
@@ -1,4 +1,4 @@
-<nb-card>
+<nb-card [nbSpinner]="loading" nbSpinnerStatus="primary">
 
   <nb-card-header>
     <div style="display: flex; justify-content: space-between; align-items: center;">
