--- a/src/app/pages/tables/dashboard/components/cuadro-avance-semanal/cuadro-avance-semanal.component.html
+++ b/src/app/pages/tables/dashboard/components/cuadro-avance-semanal/cuadro-avance-semanal.component.html
@@ -2,7 +2,7 @@
   <!--Parte 1-->
   <div>
     <div>
-      <h6>Importe Total (Hoy (Con Iva))</h6>
+      <h6>Importe Total Hoy (Con Iva)</h6>
       <h5>{{ importeHoy | currency:'EUR': true }}</h5>
     </div>
     <div>
@@ -15,7 +15,7 @@
   <br>
   <div>
     <div>
-      <h6>Número de Pedidos (Hoy)</h6>
+      <h6>Número de Pedidos Hoy</h6>
       <h5>{{ pedidosHoy }}</h5>
     </div>
     <div>
@@ -28,7 +28,7 @@
   <br>
   <div>
     <div>
-      <h6>Carrito (Hoy)</h6>
+      <h6>Carrito Hoy</h6>
       <h5>{{ carritoHoy | currency:'EUR': true }}</h5>
     </div>
     <div>
