--- a/src/app/pages/tables/dashboard/components/rotura-stock-dashboard/rotura-stock-dashboard.component.html
+++ b/src/app/pages/tables/dashboard/components/rotura-stock-dashboard/rotura-stock-dashboard.component.html
@@ -6,10 +6,10 @@
         <th scope="col">Id Producto</th>
         <th scope="col">Producto</th>
         <th scope="col">Imagen</th>
-        <th scope="col">Hoy</th>
-        <th scope="col">Hace 1 Dia</th>
-        <th scope="col">Hace 2 Días</th>
-        <th scope="col">Hace 3 Días</th>
+        <th scope="col">Uds. Hoy</th>
+        <th scope="col">Uds. 1 Dia</th>
+        <th scope="col">Uds. 2 Días</th>
+        <th scope="col">Uds. 3 Días</th>
       </tr>
     </thead>
     <tbody>
