--- a/src/app/pages/tables/dashboard/dashboard.component.html
+++ b/src/app/pages/tables/dashboard/dashboard.component.html
@@ -44,7 +44,7 @@
   <!--DashBoard Ventas hoy-->
   <div class="col-xxxl-4 col-xxl-4 col-lg-5 col-md-6">
     <nb-card>
-      <nb-card-header>Canal de Ventas (hace 7 días (Con Iva) )</nb-card-header>
+      <nb-card-header>Canal de Ventas hace 7 días (Con Iva)</nb-card-header>
         <nb-card-body>
           <ngx-grafico-ventas-una-semana></ngx-grafico-ventas-una-semana>
         </nb-card-body>
@@ -53,7 +53,7 @@
   <!--DashBoard Ventas hoy-->
   <div class="col-xxxl-4 col-xxl-4 col-lg-5 col-md-6">
     <nb-card>
-      <nb-card-header>Canal de Ventas (hace 30 días (Con Iva) )</nb-card-header>
+      <nb-card-header>Canal de Ventas hace 30 días (Con Iva)</nb-card-header>
         <nb-card-body>
           <ngx-grafico-ventas-un-mes></ngx-grafico-ventas-un-mes>
         </nb-card-body>
@@ -111,7 +111,7 @@
   <!--DashBoard Ventas Paises hoy -7-->
   <div class="col-xxxl-4 col-xxl-4 col-lg-5 col-md-6">
     <nb-card>
-      <nb-card-header>Ventas por Paises (hace 7 días (Con Iva) )</nb-card-header>
+      <nb-card-header>Ventas por Paises hace 7 días (Con Iva)</nb-card-header>
         <nb-card-body>
           <ngx-grafico-ventas-paises-una-semana></ngx-grafico-ventas-paises-una-semana>
         </nb-card-body>
@@ -120,7 +120,7 @@
   <!--DashBoard Ventas Paises hoy -30-->
   <div class="col-xxxl-4 col-xxl-4 col-lg-5 col-md-6">
     <nb-card>
-      <nb-card-header>Ventas por Paises (hace 30 días (Con Iva) )</nb-card-header>
+      <nb-card-header>Ventas por Paises hace 30 días (Con Iva)</nb-card-header>
         <nb-card-body>
           <ngx-grafico-ventas-paises-un-mes></ngx-grafico-ventas-paises-un-mes>
         </nb-card-body>
