--- a/src/app/pages/tables/ventas-por-producto/ventas-por-producto.component.html
+++ b/src/app/pages/tables/ventas-por-producto/ventas-por-producto.component.html
@@ -1,5 +1,5 @@
 <nb-card>
-  <nb-card-header>Ventas Por Producto</nb-card-header>
+  <nb-card-header>Pedidos Por Producto</nb-card-header>
   <nb-card-body>
 
     <div style="display: flex; justify-content: flex-end; align-items: center; padding: 15px;">
