--- a/src/app/pages/tables/devoluciones/devoluciones.component.html
+++ b/src/app/pages/tables/devoluciones/devoluciones.component.html
@@ -4,7 +4,7 @@
       <div> Devoluciones </div>
       <div style="display: flex;">
         <div>
-          <input type="text" nbInput [(ngModel)]="valor" placeholder="Cliente: ">
+          <input type="text" nbInput [(ngModel)]="valor" placeholder="Cliente / NPedido Amazon: ">
         </div>
         <div style="margin-left: 10px;">
           <button nbButton status="primary" (click)="buscador()"><nb-icon icon="search-outline"></nb-icon></button>
