--- a/src/app/pages/tables/dashboard/dashboard.component.html
+++ b/src/app/pages/tables/dashboard/dashboard.component.html
@@ -30,6 +30,30 @@
   </div>
 </div>
 
+<div class="row">
+  <!--Top 10 Abonos/Motivos-->
+  <div class="col-xxxl-12 col-xxl-12 col-lg-12 col-md-12">
+    <nb-card>
+      <nb-card-header>Top 10 Abonos/Motivos</nb-card-header>
+        <nb-card-body>
+          <ngx-top-abonos-motivos></ngx-top-abonos-motivos>
+        </nb-card-body>
+    </nb-card>
+  </div>
+</div>
+
+<div class="row">
+  <!--Top 10 Productos Abonados-->
+  <div class="col-xxxl-12 col-xxl-12 col-lg-12 col-md-12">
+    <nb-card>
+      <nb-card-header>Top 10 Productos Abonados</nb-card-header>
+        <nb-card-body>
+          <ngx-top-productos-abonados></ngx-top-productos-abonados>
+        </nb-card-body>
+    </nb-card>
+  </div>
+</div>
+
 <!--Segunda Parte Dashboard-->
 <div class="row">
   <!--DashBoard Ventas hoy-->
