--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -3,8 +3,8 @@
     <a (click)="toggleSidebar()" href="#" class="sidebar-toggle">
       <nb-icon icon="menu-2-outline"></nb-icon>
     </a>
-    <a class="logo" href="#" (click)="navigateHome()"><img src="../../../../assets/images/logoNuevo.png" width="100%" alt=""></a>
-    <!-- <a class="logo" href="#" (click)="navigateHome()"><img src="/orion/assets/images/logoNuevo.png" width="100%" alt=""></a> -->
+    <!-- <a class="logo" href="#" (click)="navigateHome()"><img src="../../../../assets/images/logoNuevo.png" width="100%" alt=""></a> -->
+    <a class="logo" href="#" (click)="navigateHome()"><img src="/orion/assets/images/logoNuevo.png" width="100%" alt=""></a>
   </div>
   <!-- <nb-select [selected]="currentTheme" (selectedChange)="changeTheme($event)" status="primary">
     <nb-option *ngFor="let theme of themes" [value]="theme.value"> {{ theme.name }}</nb-option>
